tooling/nargo_cli/tests/snapshots/execution_success/regression_8329/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      },
      {
        "name": "z",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "unsigned",
        "width": 1
      },
      "visibility": "public"
    },
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _20",
    "private parameters indices : [_0, _1, _2]",
    "public parameters indices : []",
    "return value indices : [_3]",
    "BLACKBOX::RANGE [_0]:1 bits []",
    "BLACKBOX::RANGE [_1]:1 bits []",
    "BLACKBOX::RANGE [_2]:1 bits []",
    "EXPR [ (1, _1) (-1, _2) (-1, _4) 0 ]",
    "BLACKBOX::RANGE [_4]:1 bits []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) 0 ]], outputs: [_5]",
    "EXPR [ (1, _2, _5) (1, _6) -1 ]",
    "EXPR [ (1, _2, _6) 0 ]",
    "EXPR [ (1, _4, _6) 0 ]",
    "BRILLIG CALL func 1: PREDICATE: EXPR [ (1, _4) 0 ]",
    "inputs: [EXPR [ (1, _0) 0 ], EXPR [ (1, _2) 0 ]], outputs: [_7, _8]",
    "BLACKBOX::RANGE [_7]:1 bits []",
    "BLACKBOX::RANGE [_8]:1 bits []",
    "EXPR [ (1, _2) (-1, _4) (-1, _8) (-1, _9) 0 ]",
    "BLACKBOX::RANGE [_9]:1 bits []",
    "EXPR [ (1, _2, _7) (1, _8) (-1, _10) 0 ]",
    "EXPR [ (1, _0, _4) (-1, _4, _10) 0 ]",
    "EXPR [ (-1, _2, _4) (1, _4, _7) (-1, _11) 0 ]",
    "BLACKBOX::RANGE [_11]:1 bits []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _11) 0 ]], outputs: [_12]",
    "EXPR [ (1, _11, _12) (1, _13) -1 ]",
    "EXPR [ (1, _11, _13) 0 ]",
    "EXPR [ (1, _4, _11) (-1, _14) 0 ]",
    "EXPR [ (1, _13, _14) 0 ]",
    "BRILLIG CALL func 1: PREDICATE: EXPR [ (1, _14) 0 ]",
    "inputs: [EXPR [ (1, _7) 0 ], EXPR [ (1, _11) 0 ]], outputs: [_15, _16]",
    "BLACKBOX::RANGE [_15]:1 bits []",
    "BLACKBOX::RANGE [_16]:1 bits []",
    "EXPR [ (1, _11) (-1, _14) (-1, _16) (-1, _17) 0 ]",
    "BLACKBOX::RANGE [_17]:1 bits []",
    "EXPR [ (1, _11, _15) (1, _16) (-1, _18) 0 ]",
    "EXPR [ (1, _7, _14) (-1, _14, _18) 0 ]",
    "EXPR [ (1, _0) (-1, _2) (-1, _19) 0 ]",
    "BLACKBOX::RANGE [_19]:1 bits []",
    "EXPR [ (1, _1) (-1, _19) (-1, _20) 0 ]",
    "BLACKBOX::RANGE [_20]:1 bits []",
    "EXPR [ (1, _3) (-1, _20) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]",
    "unconstrained func 1",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
